# fake-data-generator

./: README.md  pyproject.toml
dg_faker/: main.py
tests/: test_dg_faker.py
